Fix spacing and font weights

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,5 @@
 body {
     font-family: verdana;
-    font-weight: normal;
     color: white;
     text-align: center;
     background-color: black;
@@ -8,6 +7,7 @@ body {
 
 h1 {
     font-size: 50px;
+    font-weight: normal;
 }
 
 h2 {
@@ -18,6 +18,7 @@ h2 {
 h3 {
     font-size: 21px;
     color: gray;
+    font-weight: 150;
 }
 
 a {
@@ -25,7 +26,14 @@ a {
     font-size: 16px;
 }
 
-h4 {
+footer h3 {
     text-align: right;
-    color: gray;
+}
+
+video {
+    margin-top: 20px;
+}
+
+.icon {
+    margin-top: 20px;
 }
